# efibootnext

./: .travis.yml  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/common-setup/: action.yml
.github/actions/plan/: modes.ts  plan.ts
.github/workflows/: code.yml
cli/: Cargo.toml  manifest.rc
cli/src/: boot_next_format.rs  main.rs
efibootnext/: Cargo.toml
efibootnext/src/: adapter.rs  efivar_load_option_number_iter.rs  error.rs  heuristics_load_option_number_iter.rs  lib.rs  load_option.rs  load_option_iter.rs  load_option_number_iter.rs  operation.rs
src/: error.rs  lib.rs  load_option.rs  load_option_iter.rs  main.rs  operation.rs
