[package]
name = "efibootnext-cli"
version = "0.5.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

description = "A cli app for manipulating the BootNext UEFI variable and listing possible boot options"
documentation = "https://docs.rs/efibootnext"
repository = "https://github.com/MOZGIII/efibootnext.git"
keywords = ["uefi", "efi"]
license = "MIT"

[[bin]]
name = "efibootnext"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
efibootnext = { version = "0.5", path = "../efibootnext" }

[build-dependencies]
embed-resource = "2.2"
