[package]
name = "efibootnext"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

description = "A library for manipulating the BootNext UEFI variable and listing possible boot options"
documentation = "https://docs.rs/efibootnext"
repository = "https://github.com/MOZGIII/efibootnext.git"
keywords = ["uefi", "efi"]
license = "MIT"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
byteorder = "1.3"
efi-loadopt = "0.1"

[dependencies.efivar]
git = "https://github.com/MOZGIII/efiboot-rs.git"
rev = "9ab65ba399ad18770fbd755d5ec6f24a72d358a4"
