[package]
name = "efibootnext"
version = "0.3.1"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

description = "A library for manipulating the BootNext UEFI variable and listing possible boot options"
documentation = "https://docs.rs/efibootnext"
repository = "https://github.com/MOZGIII/efibootnext.git"
keywords = ["uefi", "efi"]
license = "MIT"

[dependencies]
efi-loadopt = "0.2.1"
efivar = "1.4"
thiserror = "1"

[features]
# We do not provide any interface stability guarantees to the implementation
# details.
expose_implementation_details = []
